# desktop-mcp

./: README.md  claude_desktop_config.example.json  claude_desktop_config.local_llm.example.json  main.py  mcp_server.py  pyproject.toml
data/: settings.json
data/workflows/: b7f9f5a6-c57c-4d01-a28d-403341648ed0.json
utils/: actions.py  image.py  input.py  llm.py
utils/platform/: __init__.py  macos.py  windows.py
workflows/: spotify.py
